--- a/tcg-binderdex/frontend/index.html
+++ b/tcg-binderdex/frontend/index.html
@@ -62,6 +62,10 @@
     </section>
   </main>
 
+  <script>
+  window.API_BASE = "https://seu-backend.onrender.com";
+  </script>
+
   <script src="js/common.js"></script>
   <script src="js/collection.js"></script>
 </body>
