--- a/tcg-binderdex/frontend/index.html
+++ b/tcg-binderdex/frontend/index.html
@@ -63,7 +63,7 @@
   </main>
 
   <script>
-  window.API_BASE = "https://seu-backend.onrender.com";
+  window.API_BASE = "https://binderdex.onrender.com/";
   </script>
 
   <script src="js/common.js"></script>
