--- a/tcg-binderdex/frontend/binder.html
+++ b/tcg-binderdex/frontend/binder.html
@@ -73,6 +73,9 @@
     </div>
   </div>
 
+  <script>
+  window.API_BASE = "https://binderdex.onrender.com/";
+  </script>
 
   <script src="js/common.js"></script>
   <script src="js/binder.js"></script>
