--- a/tcg-binderdex/frontend/search.html
+++ b/tcg-binderdex/frontend/search.html
@@ -98,6 +98,9 @@
     </div>
   </div>
 
+  <script>
+  window.API_BASE = "https://binderdex.onrender.com/";
+  </script>
 
   <script src="js/common.js"></script>
   <script src="js/search.js"></script>
