--- a/tcg-binderdex/frontend/binder.html
+++ b/tcg-binderdex/frontend/binder.html
@@ -60,7 +60,7 @@
 
     <section class="hint">
       <span class="hint-dot"></span>
-      Clique na carta para abrir detalhes. Use ⋯ para ações. Para mover/reorganizar, ative 🧩 (modo edição).
+      Duplo clique na carta para abrir detalhes. Clique uma vez para ações (Excluir / Mover de página). Para mover/reorganizar, ative 🧩 (modo edição).
     </section>
   </main>
 
